--- a/carusel.scss
+++ b/carusel.scss
@@ -97,8 +97,9 @@ h1 {
     padding: 10px 5px;
     z-index: 2;
     cursor: pointer;
+    outline: none;
     &:active {
-      border: none;
+      outline: none;
     }
   }
   &__prev-button {
